# edr

./: .gitignore  Cargo.toml  Cross.toml  HANDOFF.md  Makefile
.github/workflows/: check-changeset-added.yml  edr-benchmark.yml  edr-build.yml  edr-ci.yml  edr-npm-release.yml  hardhat-tests.yml  lock.yml  mdbook.yml  pre-release.yml  release.yml  test-recent-mainnet-block.yml  test-recent-optimism-block.yml
crates/block/builder/api/: Cargo.toml
crates/block/builder/api/src/: lib.rs
crates/block/miner/: Cargo.toml
crates/block/miner/src/: lib.rs
crates/chain/config/: Cargo.toml
crates/chain/config/src/: lib.rs
crates/chain/spec/evm/: Cargo.toml
crates/chain/spec/evm/src/: lib.rs
crates/database/components/: Cargo.toml
crates/database/components/src/: lib.rs
crates/edr_chain_l1/: Cargo.toml
crates/edr_chain_l1/src/: block.rs  chains.rs  spec.rs
crates/edr_coverage/tests/integration/: e2e.rs
crates/edr_deno/: Cargo.toml  README.md
crates/edr_deno/bindings/: bindings.ts
crates/edr_deno/edr/: mod.ts
crates/edr_deno/src/: lib.rs
crates/edr_deno/test/: provider.ts
crates/edr_eth/: Cargo.toml
crates/edr_eth/src/: lib.rs
crates/edr_evm/src/: spec.rs
crates/edr_generic/: Cargo.toml
crates/edr_generic/src/: lib.rs  precompiles.rs  rpc.rs  spec.rs
crates/edr_generic/src/rpc/: block.rs  transaction.rs
crates/edr_generic/src/transaction/: request.rs
crates/edr_generic/tests/integration/issues/: issue_570.rs  issue_947.rs
crates/edr_mirror/: Cargo.toml
crates/edr_mirror/src/: lib.rs
crates/edr_napi/: index.d.ts  index.js  package.json
crates/edr_napi/src/: chains.rs  config.rs
crates/edr_napi/src/chains/: arb.rs
crates/edr_napi_core/: Cargo.toml
crates/edr_napi_core/src/: provider.rs  spec.rs
crates/edr_napi_core/src/provider/: config.rs
crates/edr_op/: Cargo.toml
crates/edr_op/src/: lib.rs  spec.rs
crates/edr_op/src/block/: builder.rs
crates/edr_op/src/receipt/: block.rs
crates/edr_op/src/transaction/: pooled.rs
crates/edr_op/tests/integration/: provider.rs
crates/edr_provider/: Cargo.toml
crates/edr_provider/src/: config.rs  data.rs  debug_trace.rs  provider.rs  test_utils.rs
crates/edr_provider/src/data/: call.rs  gas.rs
crates/edr_provider/src/requests/eth/: gas.rs
crates/edr_provider/src/requests/hardhat/: state.rs
crates/edr_rpc_client/src/: client.rs
crates/edr_rpc_eth/src/: cacheable_method_invocation.rs
crates/edr_scenarios/src/: lib.rs
crates/edr_utils/src/: lib.rs
crates/evm/: Cargo.toml
crates/evm/src/: lib.rs
crates/precompile/: Cargo.toml
crates/precompile/src/: lib.rs
crates/state/api/src/: diff.rs
crates/test/block_replay/src/: lib.rs
crates/test/blockchain/: Cargo.toml
crates/test/blockchain/src/: lib.rs
