[package]
name = "edr_mirror"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives.workspace = true
edr_chain_config.workspace = true
edr_primitives.workspace = true
edr_state_api.workspace = true
revm-context-interface.workspace = true
revm-handler.workspace = true
revm-interpreter.workspace = true
revm-primitives.workspace = true
revm-state.workspace = true

[lints]
workspace = true
