[package]
name = "edr_precompile"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives.workspace = true
edr_chain_config.workspace = true
edr_primitives.workspace = true
revm-context-interface.workspace = true
revm-handler.workspace = true
revm-interpreter.workspace = true
revm-precompile.workspace = true

[lints]
workspace = true
